--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.2",
     "@reduxjs/toolkit": "^1.6.0",
     "firebase": "^8.7.1",
     "next": "11.0.1",
